dark mode fix

--- a/src/components/Draft/FilterBar.scss
+++ b/src/components/Draft/FilterBar.scss
@@ -13,6 +13,10 @@ $black: #212529;
     padding: 15px 20px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
     margin-bottom: 25px;
+            [data-theme="dark"] & {
+          background: #3a3939c9;
+          border: solid 1px rgba(128, 128, 128, 0.144);
+        }
     
     &__content {
         display: flex;
@@ -57,10 +61,14 @@ $black: #212529;
       background-color: $white;
       cursor: pointer;
       transition: all 0.3s ease-in-out;
+              [data-theme="dark"] & {
+          background: #3a3939c9;
+          border: solid 1px rgba(128, 128, 128, 0.144);
+        }
 
       
       &:hover {
-        background-color: $light-gray;
+        background-color: darken(blue, 5%);
       }
       
       &--active {
