--- a/src/components/tooltip/UpvoteTooltip.scss
+++ b/src/components/tooltip/UpvoteTooltip.scss
@@ -18,6 +18,9 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
+    [data-theme="dark"] & {
+      border: solid 1px rgba(128, 128, 128, 0.144);
+    }
     @include respond(phone) {
       width: 200px;
       padding: 6px;
